actualiza el script.js

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <section>
            <textarea id="texto-encriptado" class="campo-texto" placeholder="texto a encriptar"></textarea>
            <div class="btn">
-            <button class="btnencriptar">Ecriptar</button>
+            <button class="btnencriptar" onclick="btnEncriptar()">Ecriptar</button>
             <button class="btndesencriptar">Desencriptar</button>
            </div>
         </section class="campo-mensaje">
@@ -21,6 +21,6 @@
 
         </section>
     </main>
-    
+    <script src="script.js"></script>
 </body>
 </html>
