actualiza el index.html

--- a/index.html
+++ b/index.html
@@ -1,26 +1,13 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Encriptador de texto</title>
-
+    <title>Home</title>
 </head>
-<body> 
-    <main class="main">
-        <section>
-           <textarea id="texto-encriptado" class="campo-texto" placeholder="texto a encriptar"></textarea>
-           <div class="btn">
-            <button class="btnencriptar" onclick="btnEncriptar()">Ecriptar</button>
-            <button class="btndesencriptar">Desencriptar</button>
-           </div>
-        </section class="campo-mensaje">
-        <textarea class="mensaje" id="campo-mensaje"></textarea>
-        <section>
-
-        </section>
-    </main>
-    <script src="script.js"></script>
+<body>
+    <h1>Home</h1>
+    <button id="logout">Logout</button>
+    <script src="index.js"></script>
 </body>
 </html>
