actualiza el login.html

--- a/login.html
+++ b/login.html
@@ -18,5 +18,6 @@
         </form>
         <p>No tienes una cuenta? <a href="signup.html">Registrar</a></p>
     </section>
+    <script src="login.html"></script>
 </body>
 </html>
