actualizacion del styles.css

--- a/signup.html
+++ b/signup.html
@@ -9,17 +9,17 @@
 </head>
 <body>
     <section>
-        <h2>Regristra un cuenta nueva</h2>
+        <h2>Regristra una cuenta nueva</h2>
         <form id="signupfotm">
             <label>Nombre de usuario</label>
             <input type="text" placeholder="..." id ="name" required autofocus> 
-            <label>Mail</label>
+            <label>Correo</label>
             <input type="email" placeholder="xxxxx@xxxx.xx" id ="email" required>
             <label>Contraseña</label>
             <input type="password" placeholder="xxxxxxxx" id ="password" required>
-            <input type="submit" value="Crear cuenta"> 
+            <input class="submit" type="submit" value="Crear cuenta"> 
         </form>
-        <p>tienes una cuenta? <a href="login.html">Inicior secion</a></p>
+        <p>tienes una cuenta? <a href="login.html">Inicior sesion</a></p>
     </section>
     <script src="signup.js"></script>
 </body>
