--- a/login.html
+++ b/login.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <section>
-        <h2>Inicio de secon</h2>
+        <h2>Inicio de sesion</h2>
         <form id="loginform">
             <label>Correo</label>
             <input type="email" placeholder="xxxxx@xxxx.xx" id ="email" required autofocus>
             <label>Contraseña</label>
             <input type="password" placeholder="xxxxxxxx" id ="password" required>
-            <input type="submit" value="Ingresar"> 
+            <input class="submit" type="submit" value="Ingresar"> 
         </form>
         <p>No tienes una cuenta? <a href="signup.html">Registrar</a></p>
     </section>
