actualizacion de carpeta img

--- a/login.html
+++ b/login.html
@@ -8,6 +8,8 @@
     <title>Login</title>
 </head>
 <body>
+    <img src="img/png-clipart-technology-background-dot-texture-technology-background-thumbnail.png" class="lineas" alt="imagen de lineas y puntos">
+    <img src="img/9059.png_300.png" class="marco" alt="imagen de marco">
     <section>
         <h2>Inicio de sesion</h2>
         <form id="loginform">
