actualizacion del styles.css

--- a/signup.html
+++ b/signup.html
@@ -8,10 +8,9 @@
     <title>Registro</title>
 </head>
 <body>
-    <img src="img/png-clipart-technology-background-dot-texture-technology-background-thumbnail.png" class="lineas" alt="imagen de lineas y puntos">
-    <img src="img/9059.png_300.png" class="marco" alt="imagen de marco">
+    <img src="img/9059.png_300-removebg-preview.png" class="marco" alt="imagen de marco">
     <section>
-        <h2>Regristra una cuenta nueva</h2>
+        <h2 class="caja">Regristra una cuenta nueva</h2>
         <form id="signupfotm">
             <label>Nombre de usuario</label>
             <input type="text" placeholder="..." id ="name" required autofocus> 
@@ -21,7 +20,7 @@
             <input type="password" placeholder="xxxxxxxx" id ="password" required>
             <input class="submit" type="submit" value="Crear cuenta"> 
         </form>
-        <p>tienes una cuenta? <a href="login.html">Inicior sesion</a></p>
+        <p class="fondo">tienes una cuenta? <a href="login.html">Inicior sesion</a></p>
     </section>
     <script src="signup.js"></script>
 </body>
