--- a/login.html
+++ b/login.html
@@ -8,10 +8,9 @@
     <title>Login</title>
 </head>
 <body>
-    <img src="img/png-clipart-technology-background-dot-texture-technology-background-thumbnail.png" class="lineas" alt="imagen de lineas y puntos">
-    <img src="img/9059.png_300.png" class="marco" alt="imagen de marco">
+    <img src="img/9059.png_300-removebg-preview.png" class="marco" alt="imagen de marco">
     <section>
-        <h2>Inicio de sesion</h2>
+        <h2 class="caja">Inicio de sesion</h2>
         <form id="loginform">
             <label>Correo</label>
             <input type="email" placeholder="xxxxx@xxxx.xx" id ="email" required autofocus>
@@ -19,7 +18,7 @@
             <input type="password" placeholder="xxxxxxxx" id ="password" required>
             <input class="submit" type="submit" value="Ingresar"> 
         </form>
-        <p>No tienes una cuenta? <a href="signup.html">Registrar</a></p>
+        <p class="fondo">No tienes una cuenta? <a href="signup.html">Registrar</a></p>
     </section>
     <script src="login.html"></script>
 </body>
