actualizacion del styles.css

--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
     <title>Login</title>
 </head>
 <body>
-    <img src="img/9059.png_300-removebg-preview.png" class="marco" alt="imagen de marco">
+    <img src="img/lovepik-rectangular-technology-border-png-image_401001524_wh1200-removebg-preview-removebg-preview.png" class="marco" alt="imagen de marco">
     <section>
         <h2 class="caja">Inicio de sesion</h2>
         <form id="loginform">
