--- a/signup.html
+++ b/signup.html
@@ -8,9 +8,9 @@
     <title>Registro</title>
 </head>
 <body>
-    <img src="img/9059.png_300-removebg-preview.png" class="marco" alt="imagen de marco">
+    <img src="img/lovepik-rectangular-technology-border-png-image_401001524_wh1200-removebg-preview-removebg-preview.png" class="marco2" alt="imagen de marco">
     <section>
-        <h2 class="caja">Regristra una cuenta nueva</h2>
+        <h2 class="caja2">Regristra una cuenta nueva</h2>
         <form id="signupfotm">
             <label>Nombre de usuario</label>
             <input type="text" placeholder="..." id ="name" required autofocus> 
