--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="x-ua-compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Home</title>
 </head>
-<body>
-    <h1>Home</h1>
-    <button id="logout">Logout</button>
+<section>
+<body class="home">
+    <h2 class="caja">Home</h2>
+    <button id="logout">Inicio</button>
     <script src="index.js"></script>
 </body>
+</section>
 </html>
