cracion de codigos ,js

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body class="home">
     <h2 class="caja">Home</h2>
     <button id="logout">Inicio</button>
+    <p id="parrafo" style="display: none;">Hasta pronto</p>
     <script src="index.js"></script>
 </body>
 </section>
