--- a/login.html
+++ b/login.html
@@ -17,9 +17,11 @@
             <label>Contraseña</label>
             <input type="password" placeholder="xxxxxxxx" id ="password" required>
             <input class="submit" type="submit" value="Ingresar"> 
+            <p id="alerta" style="display: none;">Usuario y/o contraseña incorrectos!</p>
+            <p id="bienvenido" style="display: none;"></p>
         </form>
         <p class="fondo">No tienes una cuenta? <a href="signup.html">Registrar</a></p>
     </section>
-    <script src="login.html"></script>
+    <script src="login.js"></script>
 </body>
 </html>
