crea el index.css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <section>
 <body class="home">
     <h2 class="caja">Home</h2>
-    <button id="logout">Inicio</button>
+    <button id="logout">Cerrar sesion</button>
     <p id="parrafo" style="display: none;">Hasta pronto</p>
     <script src="index.js"></script>
 </body>
