--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <section>
 <body class="home">
-    <h2 class="caja">Home</h2>
+    <h2 id="caja">Encriptador de texto</h2>
     <button id="logout">Cerrar sesion</button>
     <p id="parrafo" style="display: none;">Hasta pronto</p>
     <script src="index.js"></script>
