actualizacion de codigo

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <button id="logout">Cerrar sesion</button>
     <p id="parrafo" style="display: none;">Hasta pronto</p>
     <script src="index.js"></script>
+
+    <footer>
+        <p class="copyright">&copy Elaborado por angel - 2024</p>
+    </footer>
 </body>
 </section>
 </html>
