--- a/login.html
+++ b/login.html
@@ -22,6 +22,9 @@
         </form>
         <p class="fondo">No tienes una cuenta? <a href="signup.html">Registrar</a></p>
     </section>
+    <footer>
+        <p class="copyright">&copy Elaborado por angel - 2024</p>
+    </footer>
     <script src="login.js"></script>
 </body>
 </html>
