--- a/signup.html
+++ b/signup.html
@@ -22,6 +22,9 @@
         </form>
         <p class="fondo">tienes una cuenta? <a href="login.html">Inicior sesion</a></p>
     </section>
+    <footer>
+        <p class="copyright">&copy Elaborado por angel - 2024</p>
+    </footer>
     <script src="signup.js"></script>
 </body>
 </html>
