actualiza el index.html

--- a/index.html
+++ b/index.html
@@ -4,14 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="img/imagenes/favicon.ico">
     <link rel="stylesheet" href="index.css">
     <title>Encriptador</title>
 </head>
 <section>
 <body class="home">
-    <h2 id="caja"> Encriptador de texto</h2>
-    <button id="logout">Cerrar sesion</button>
-    <p id="parrafo" style="display: none;">Hasta pronto</p>
+    <!--encabezado-->
+    <header>
+        <a href="#" rel="">
+            <img src="img/imagenes/logo.svg" alt="Logo de aluralatam" class="logo">
+        </a>
+            <h2 id="caja"> Encriptador de texto</h2>
+            <button id="logout">Cerrar sesion</button>
+            <p id="parrafo" style="display: none;">Hasta pronto</p>
+    </header>
+    <!--principal-->
+    <main>
+        <section class="encriptador">
+            <textarea name="encriptada" class="encriptada" placeholder="Ingrese el texto aqui" required ></textarea>
+            <div class="encriptador-aviso">
+                
+            </div>
+
+        </section>
+        <section class="tarjeta">
+
+        </section>
+    </main>
+
     <script src="index.js"></script>
 
     <footer>
