actualiza el index.html

--- a/index.html
+++ b/index.html
@@ -24,11 +24,22 @@
         <section class="encriptador">
             <textarea name="encriptada" class="encriptada" placeholder="Ingrese el texto aqui" required ></textarea>
             <div class="encriptador-aviso">
+                <img src="img/imagenes/aviso.svg" alt="texto de aviso" class="imag-aviso">
+                <p class="texto-aviso">Solo letras minusculas y sin acentos</p>
+            </div>
+            <div class="conten-encriptado">
+                <button type="submit" class="btn-encriptar">encriptador</button>
+                <button type="submit" class="btn-desencriptar">Desencriptar</button>
                 
+
             </div>
 
         </section>
         <section class="tarjeta">
+            <div class="tarjeta-contenedor">
+                <img src="img/img2/monitors-typing.gif" alt="imagen de uso con computadora" class="img-oso">
+                <p></p>
+            </div>
 
         </section>
     </main>
