actualiza el index.html

--- a/index.html
+++ b/index.html
@@ -38,16 +38,25 @@
         <section class="tarjeta">
             <div class="tarjeta-contenedor">
                 <img src="img/img2/monitors-typing.gif" alt="imagen de uso con computadora" class="img-oso">
-                <p></p>
+                <p class="texto-uno">No se encontro ningun mensaje</p>
+                <p class="texto-dos">Ingresa el texto que desea incriptar o desencriptar</p>
             </div>
+            <textarea type="mensaje" class="evaluar" readonly></textarea>
+            <button type="submit" class="btn-copiar">Copiar</button>
 
         </section>
     </main>
-
+    <!--pie de pagina-->
     <script src="index.js"></script>
 
     <footer>
-        <p class="copyright">&copy Elaborado por angel - 2024</p>
+        <p class="copyright">&copy copyright 2024 - Encriptador de texto - Desarrollado por Angel66694</p>
+        <a href="#" rel="">
+            <img src="img/imagenes/linkedin.svg" alt="logo linkedin" class="linke">
+            <img src="img/imagenes/github.svg" alt="logo github" class="github">
+
+        </a>
+         
     </footer>
 </body>
 </section>
