actualizacion del styles.css

--- a/signup.html
+++ b/signup.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>Registro</title>
 </head>
-<body>
-  
+<body class="registro-caja">
     <section>
         <h2 class="caja2">Regristra una cuenta nueva</h2>
         <form id="signupFotm">
@@ -23,7 +22,11 @@
         <p class="fondo">tienes una cuenta? <a href="login.html">Inicior sesion</a></p>
     </section>
     <footer>
-        <p class="copyright">&copy Elaborado por angel - 2024</p>
+        <p class="copyright">&copy copyright 2024 - Encriptador de texto - Desarrollado por Angel66694</p>
+        <a href="#" rel="">
+            <img src="img/imagenes/linkedin.svg" alt="logo linkedin" class="linke">
+            <img src="img/imagenes/github.svg" alt="logo github" class="github">
+        </a>
     </footer>
     <script src="signup.js"></script>
 </body>
