--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
         <a href="#" rel="">
             <img src="img/imagenes/logo.svg" alt="Logo de aluralatam" class="logo">
         </a>
-            <h2 id="caja"> Encriptador de texto</h2>
-            <button id="logout">Cerrar sesion</button>
-            <p id="parrafo" style="display: none;">Hasta pronto</p>
     </header>
+    <!--boton de cierre de sesion-->
+    <div class="cierre">
+        <h1 class="tiulo" id="titulo"> Encriptador de texto</h1>
+        <button class="logout" id="logout">Cerrar sesion</button>
+        <p id="parrafo" style="display: none;">Hasta pronto</p>
+    </div>
     <!--principal-->
     <main>
         <section class="encriptador">
