--- a/login.html
+++ b/login.html
@@ -22,7 +22,13 @@
         <p class="fondo">No tienes una cuenta? <a href="signup.html">Registrar</a></p>
     </section>
     <footer>
-        <p class="copyright">&copy Elaborado por angel - 2024</p>
+        <p class="copyright">&copy copyright 2024 - Encriptador de texto - Desarrollado por Angel66694</p>
+        <a href="#" rel="">
+            <img src="img/imagenes/linkedin.svg" alt="logo linkedin" class="linke">
+            <img src="img/imagenes/github.svg" alt="logo github" class="github">
+
+        </a>
+         
     </footer>
     <script src="login.js"></script>
 </body>
