actualiza el login.html

--- a/login.html
+++ b/login.html
@@ -8,6 +8,14 @@
     <title>Login</title>
 </head>
 <body>
+    <!------------------------
+    Encabezado
+----------------------------->
+<header>
+    <a href="#" rel="">
+        <img src="img/imagenes/logo.svg" alt="Logo de aluralatam" class="logo">
+    </a>
+</header>
     <section>
         <h2 class="caja">Inicio de sesion</h2>
         <form id="loginform">
