actualiza el signup.html

--- a/signup.html
+++ b/signup.html
@@ -8,6 +8,14 @@
     <title>Registro</title>
 </head>
 <body class="registro-caja">
+      <!------------------------
+    Encabezado
+----------------------------->
+<header>
+    <a href="#" rel="">
+        <img src="img/imagenes/logo.svg" alt="Logo de aluralatam" class="logo">
+    </a>
+</header>
     <section>
         <h2 class="caja2">Regristra una cuenta nueva</h2>
         <form id="signupFotm">
