actualiza el style.css

--- a/login.html
+++ b/login.html
@@ -16,9 +16,10 @@
         <img src="img/imagenes/logo.svg" alt="Logo de aluralatam" class="logo">
     </a>
 </header>
-    <section>
-        <h2 class="caja">Inicio de sesion</h2>
-        <form id="loginform">
+<main>
+    <section lass="principal">
+        <h2 class="titulo">Inicio de sesion</h2>
+        <form class="loginform" id="loginform">
             <label>Correo</label>
             <input type="email" placeholder="xxxxx@xxxx.xx" id ="email" required autofocus>
             <label>Contraseña</label>
@@ -29,6 +30,7 @@
         </form>
         <p class="fondo">No tienes una cuenta? <a href="signup.html">Registrar</a></p>
     </section>
+</main>
     <footer>
         <p class="copyright">&copy copyright 2024 - Encriptador de texto - Desarrollado por Angel66694</p>
         <a href="#" rel="">
