--- a/signup.html
+++ b/signup.html
@@ -16,19 +16,27 @@
         <img src="img/imagenes/logo.svg" alt="Logo de aluralatam" class="logo">
     </a>
 </header>
-    <section>
-        <h2 class="caja2">Regristra una cuenta nueva</h2>
+<!-------------------------------------
+Princilap
+-------------------------------------->
+<main>
+    <section class="principal">
+        <h2 >Regristra una cuenta nueva</h2>
         <form id="signupFotm">
             <label>Nombre de usuario</label>
-            <input type="text" placeholder="..." id ="name" required autofocus> 
+            <input type="text" placeholder="" id ="name" required autofocus> 
             <label>Correo</label>
             <input type="email" placeholder="xxxxx@xxxx.xx" id ="email" required>
             <label>Contraseña</label>
-            <input type="password" placeholder="xxxxxxxx" id ="password" required>
+            <input  type="password" placeholder="xxxxxxxx" id ="password" required>
             <input class="submit" type="submit" value="Crear cuenta"> 
         </form>
         <p class="fondo">tienes una cuenta? <a href="login.html">Inicior sesion</a></p>
     </section>
+</main>
+<!----------------------------------
+Pie de pagina
+----------------------------------->
     <footer>
         <p class="copyright">&copy copyright 2024 - Encriptador de texto - Desarrollado por Angel66694</p>
         <a href="#" rel="">
