actualizacion de la paguina

--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>Login</title>
 </head>
-<body>
+<body >
     <!------------------------
     Encabezado
 ----------------------------->
@@ -17,7 +17,10 @@
     </a>
 </header>
 <main>
-    <section lass="principal">
+    <!---------------------
+    prinsipal
+--------------------------->
+    <section class="principal">
         <h2 class="titulo">Inicio de sesion</h2>
         <form class="loginform" id="loginform">
             <label>Correo</label>
@@ -31,6 +34,10 @@
         <p class="fondo">No tienes una cuenta? <a href="signup.html">Registrar</a></p>
     </section>
 </main>
+
+<!-------------------------------
+Pie de pagina
+-------------------------------->
     <footer>
         <p class="copyright">&copy copyright 2024 - Encriptador de texto - Desarrollado por Angel66694</p>
         <a href="#" rel="">
