--- a/signup.html
+++ b/signup.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>Registro</title>
 </head>
-<body class="registro-caja">
+<body >
       <!------------------------
     Encabezado
 ----------------------------->
@@ -31,7 +31,7 @@ Princilap
             <input  type="password" placeholder="xxxxxxxx" id ="password" required>
             <input class="submit" type="submit" value="Crear cuenta"> 
         </form>
-        <p class="fondo">tienes una cuenta? <a href="login.html">Inicior sesion</a></p>
+        <p class="fondo">tienes una cuenta? <a href="login.html">Iniciar sesion</a></p>
     </section>
 </main>
 <!----------------------------------
