actualiza el login.html

--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="img/imagenes/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="img/imagenes/halloween35_109186.ico">
     <link rel="stylesheet" href="styles.css">
     <title>Login</title>
 </head>
