actualiza el estilo de la paguina

--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
             <p id="alerta" style="display: none;">Usuario y/o contraseña incorrectos!</p>
             <p id="bienvenido" style="display: none;"></p>
         </form>
-        <p class="fondo">No tienes una cuenta? <a href="signup.html">Registrar</a></p>
+        <p class="fondo">No tienes una cuenta? <a href="signup.html">Registrate</a></p>
     </section>
 </main>
 
