actualiza index.css

--- a/index.html
+++ b/index.html
@@ -46,8 +46,13 @@
             </div>
             <textarea type="mensaje" class="evaluar" readonly></textarea>
             <button type="submit" class="btn-copiar">Copiar</button>
-
+          
         </section>
+        <div class="contenedor-icono">
+            <button class="icon-btn">
+                <img src="img/img2/papelera-de-reciclaje.png" alt="icono">
+            </button>
+        </div>
     </main>
     <!--pie de pagina-->
     <script src="index.js"></script>
