actualizacion de la pagina v1.1

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
             <button type="submit" class="btn-copiar">Copiar</button>
 
         </section>
+        <script src="index.js"></script>
     </main>
     <!--pie de pagina-->
-    <script src="index.js"></script>
-
+   
     <footer>
         <p class="copyright">&copy copyright 2024 - Encriptador de texto - Desarrollado por Angel66694</p>
         <a href="#" rel="">
@@ -61,7 +61,8 @@
         </a>
          
     </footer>
-</body>
-</section>
+    
+    <script src="extras/sweetAlert.js"></script>
 
+</body>
 </html>
