Actualizar signup.html

--- a/signup.html
+++ b/signup.html
@@ -29,7 +29,7 @@ Princilap
             <label>Correo</label>
             <input type="email" placeholder="xxxxx@xxxx.xx" id ="email" required>
             <label>Contraseña</label>
-            <input  type="password" placeholder="xxxxxxxx" id ="password" required>
+            <input  type="password" placeholder="6 caracteres por lo menos" id ="password" required>
             <input class="submit" type="submit" value="Crear cuenta"> 
         </form>
         <p class="fondo">tienes una cuenta? <a href="login.html">Iniciar sesion</a></p>
