actualiza el codigo del login.js

--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="img/imagenes/halloween35_109186.ico">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <title>Login</title>
 </head>
 <body >
@@ -29,7 +30,6 @@
             <label>Contraseña</label>
             <input type="password" placeholder="xxxxxxxx" id ="password" required>
             <input class="submit" type="submit" value="Ingresar"> 
-            <p id="alerta" style="display: none;">Usuario y/o contraseña incorrectos!</p>
             <p id="bienvenido" style="display: none;"></p>
         </form>
         <p class="fondo">No tienes una cuenta? <a href="signup.html">Registrate</a></p>
