actualizacion de estilo

--- a/index.html
+++ b/index.html
@@ -49,9 +49,10 @@
             <button type="submit" class="btn-copiar">Copiar</button>
           
         </section>
-        <div class="contenedor-icono">
+       <div class="contenedor-icono">
             <button class="icon-btn">
-                <img src="img/img2/papelera-de-reciclaje.png" alt="icono">
+                <p class="btn-borrar">Borrar</p>
+                <img src="img/img2/basura.png" alt="icono">
             </button>
         </div>
     </main>
