actualizar archivo .js

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="img/imagenes/vicon.ico">
     <link rel="stylesheet" href="index.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     
     <title>Encriptador</title>
 </head>
@@ -21,7 +22,7 @@
     <div class="cierre">
         <h1 class="tiulo" id="titulo"> Encriptador de texto</h1>
         <button class="logout" id="logout">Cerrar sesion</button>
-        <p id="parrafo" style="display: none;">Hasta pronto</p>
+    
     </div>
     <!--principal-->
     <main>
