actualiza el signup.html

--- a/signup.html
+++ b/signup.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="img/imagenes/halloween42_109167.ico">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="alertas.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <title>Registro</title>
 </head>
