Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <!--boton de cierre de sesion-->
         <div class="cierre">
             <h1 class="tiulo" id="titulo"> Encriptador de texto</h1>
-            <button class="logout" id="logout">Cerrar sesion</button>
+            <button class="logout" id="logout">Cerrar sesión</button>
 
         </div>
         <!--principal-->
@@ -56,7 +56,7 @@
             <!--Boton para reinciar la paguina -->
             <div class="contenedor-icono">
                 <button onclick="borrar()" class="icon-btn">
-                    <p class="btn-borrar">Borrar</p>
+                    <p class="btn-borrar">Reiniciar</p>
                 </button>
             </div>
         </main>
