--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <textarea name="encriptada" class="encriptada" placeholder="Ingrese el texto aqui" required></textarea>
                 <div class="encriptador-aviso">
                     <img src="img/imagenes/aviso.svg" alt="texto de aviso" class="imag-aviso">
+                    <p id="parrafo" class="texto-aviso">Solo se permiten minusculas y sin caracteres especiales</p>
                 </div>
                 <div class="conten-encriptado">
                     <button type="submit" class="btn-encriptar">encriptador</button>
