actualiza el index.html

--- a/index.html
+++ b/index.html
@@ -66,11 +66,12 @@
 
         <footer>
             <p class="copyright">&copy copyright 2024 - Encriptador de texto - Desarrollado por Angel66694</p>
-            <a href="#" rel="">
-                <img src="img/imagenes/linkedin.svg" alt="logo linkedin" class="linke">
-                <img src="img/imagenes/github.svg" alt="logo github" class="github">
+         <a>
+            <img src="img/imagenes/linkedin.svg" alt="logo linkedin" class="linke">
+              
+           <a href="https://github.com/Angel66694/encriptador-de-texto"><img src="img/imagenes/github.svg" alt="logo github" class="github"></a>
 
-            </a>
+        </a>
 
         </footer>
     </body>
