--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <img src="img/imagenes/logo.svg" alt="Logo de aluralatam" class="logo">
             </a>
         </header>
-        <!--boton de cierre de sesion-->
+        <!--botón de cierre de sesión-->
         <div class="cierre">
             <h1 class="tiulo" id="titulo"> Encriptador de texto</h1>
             <button class="logout" id="logout">Cerrar sesión</button>
@@ -30,13 +30,13 @@
         <!--principal-->
         <main>
             <section class="encriptador">
-                <textarea name="encriptada" class="encriptada" placeholder="Ingrese el texto aqui" required></textarea>
+                <textarea name="encriptada" class="encriptada" placeholder="Ingrese el texto aquí" required></textarea>
                 <div class="encriptador-aviso">
                     <img src="img/imagenes/aviso.svg" alt="texto de aviso" class="imag-aviso">
-                    <p id="parrafo" class="texto-aviso">Solo se permiten minusculas y sin caracteres especiales</p>
+                    <p id="parrafo" class="texto-aviso">Solo se permiten minúsculas y sin caracteres especiales</p>
                 </div>
                 <div class="conten-encriptado">
-                    <button type="submit" class="btn-encriptar">encriptador</button>
+                    <button type="submit" class="btn-encriptar">Encriptar</button>
                     <button type="submit" class="btn-desencriptar">Desencriptar</button>
 
 
@@ -47,14 +47,14 @@
             <section class="tarjeta">
                 <div class="tarjeta-contenedor">
                     <img src="img/img2/monitors-typing.gif" alt="imagen de uso con computadora" class="img-oso">
-                    <p class="texto-uno">No se encontro ningun mensaje</p>
-                    <p class="texto-dos">Ingresa el texto que desea incriptar o desencriptar</p>
+                    <p class="texto-uno">No se encontró ningún mensaje</p>
+                    <p class="texto-dos">Ingresa el texto que desea encriptar o Desencriptar</p>
                 </div>
                 <textarea type="mensaje" class="evaluar" readonly></textarea>
                 <button type="submit" class="btn-copiar">Copiar</button>
 
             </section>
-            <!--Boton para reinciar la paguina -->
+            <!--Botón para reiniciar la pagina -->
             <div class="contenedor-icono">
                 <button onclick="borrar()" class="icon-btn">
                     <p class="btn-borrar">Reiniciar</p>
@@ -67,7 +67,7 @@
         <footer>
             <p class="copyright">&copy copyright 2024 - Encriptador de texto - Desarrollado por Angel66694</p>
          <a>
-            <img src="img/imagenes/linkedin.svg" alt="logo linkedin" class="linke">
+            <img src="img/imagenes/linkedin.svg" alt="logo LinkedIn" class="linke">
               
            <a href="https://github.com/Angel66694/encriptador-de-texto"><img src="img/imagenes/github.svg" alt="logo github" class="github"></a>
 
