--- a/login.html
+++ b/login.html
@@ -21,10 +21,10 @@
 </header>
 <main>
     <!---------------------
-    prinsipal
+    principal
 --------------------------->
     <section class="principal">
-        <h2 class="titulo">Inicio de sesion</h2>
+        <h2 class="titulo">Inicio de sesión</h2>
         <form class="loginform" id="loginform">
             <label>Correo</label>
             <input type="email" placeholder="xxxxx@xxxx.xx" id ="email" required autofocus>
@@ -33,7 +33,7 @@
             <input class="submit" type="submit" value="Ingresar"> 
             <p id="bienvenido" style="display: none;"></p>
         </form>
-        <p class="fondo">No tienes una cuenta? <a href="signup.html">Registrate</a></p>
+        <p class="fondo">No tienes una cuenta? <a href="signup.html">Regístrate</a></p>
     </section>
 </main>
 
@@ -43,7 +43,7 @@ Pie de pagina
     <footer>
         <p class="copyright">&copy copyright 2024 - Encriptador de texto - Desarrollado por Angel66694</p>
         <a href="#" rel="">
-            <img src="img/imagenes/linkedin.svg" alt="logo linkedin" class="linke">
+            <img src="img/imagenes/linkedin.svg" alt="logo LinkedIn" class="linke">
             <img src="img/imagenes/github.svg" alt="logo github" class="github">
 
         </a>
