--- a/signup.html
+++ b/signup.html
@@ -20,11 +20,11 @@
     </a>
 </header>
 <!-------------------------------------
-Princilap
+Principal
 -------------------------------------->
 <main>
     <section class="principal">
-        <h2 >Regristra una cuenta nueva</h2>
+        <h2 >Registra una cuenta nueva</h2>
         <form id="signupFotm">
             <label>Nombre de usuario</label>
             <input type="text" placeholder="" id ="name" required autofocus> 
@@ -34,7 +34,7 @@ Princilap
             <input  type="password" placeholder="8 caracteres por lo menos" id ="password" required>
             <input class="submit" type="submit" value="Crear cuenta"> 
         </form>
-        <p class="fondo">tienes una cuenta? <a href="login.html">Iniciar sesion</a></p>
+        <p class="fondo">tienes una cuenta? <a href="login.html">Iniciar sesión</a></p>
     </section>
 </main>
 <!----------------------------------
@@ -43,7 +43,7 @@ Pie de pagina
     <footer>
         <p class="copyright">&copy copyright 2024 - Encriptador de texto - Desarrollado por Angel66694</p>
         <a href="#" rel="">
-            <img src="img/imagenes/linkedin.svg" alt="logo linkedin" class="linke">
+            <img src="img/imagenes/linkedin.svg" alt="logo LinkedIn" class="linke">
             <img src="img/imagenes/github.svg" alt="logo github" class="github">
         </a>
     </footer>
